--- a/InventoryAPI/InventoryAPI.csproj
+++ b/InventoryAPI/InventoryAPI.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+      <UserSecretsId>f20a5c3b-35ad-4f3e-90de-a2fcdbfe208d</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="5.0.1" />
         <PackageReference Include="MongoDB.Driver" Version="2.13.0-beta1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
